# parallel-softbody-renderer

./: .gitignore  CMakeLists.txt  README.md  index.html  milestone.html
assets/css/: main.css
include/: Camera.h  Mesh.h  Model.h  Object.h  Shader.h  circle.hpp  create_input.hpp  cuda_solver.h  preprocessing.hpp  solver.hpp  vec2.hpp
include/Shaders/: fragment.glsl  vertex.glsl
python/: circle.py  circles.py  grid.py  renderer.py  softbody_sim.py  solver.py  spring.py  utils.py
src/: Makefile  camera.cpp  circle.cpp  create_input.cpp  cuda_solver.cu  cuda_solver.cu.bak  main.cpp  mesh.cpp  model.cpp  object.cpp  preprocessing  preprocessing.cpp  sfml-app  shader.cpp  solver.cpp  vec2.cpp
src/Shaders/: fragment.glsl  vertex.glsl
tests/: Suzanne.fbx  particle.fbx  threepoint.txt  twopoint.txt
